# json-dbus-bridge

./: .gitignore  CMakeLists.txt  Makefile.am  README  README.lighttpd  TODO  autogen.sh  bridge.c  bridge.h  bridge_request.c  bridge_request.h  configure.ac  json-dbus-bridge.c
cmake-modules/: Findfcgi.cmake
debian/: postinst  prerm
demo/: Makefile.am  dbus-python-service.py  helper.js  index.html  lighttpd.conf.in  run.sh.in  simple-test.sh
demo/dbus-simple-service/: Makefile.am  com_pengutronix_devel_SystemInfo.xml  com_pengutronix_jdb_SystemInfo.xml  dbus-simple-service.c  systeminfo_skel.c  systeminfo_skel.h
m4/: ax_lib_event.m4
nginx/: CMakeLists.txt  json-dbus-bridge.conf
nginx/debian/: postinst  postrm
src/: CMakeLists.txt  Makefile.am  bridge.c  bridge.h  bridge_request.c  bridge_request.h  json-dbus-bridge.c
systemd/: CMakeLists.txt  json-dbus-bridge@.service  json-dbus-bridge@.socket
tests/: Makefile.am  basic_boolean_test.sh  basic_byte_test.sh  basic_double_test.sh  basic_int16_test.sh  basic_int32_test.sh  basic_int64_test.sh  basic_signature_test.sh  basic_string_test.sh  basic_test.sh  basic_uint16_test.sh  basic_uint32_test.sh  basic_uint64_test.sh  complex_array_test.sh  complex_dict_test.sh  complex_struct_test.sh  complex_variant_test.sh  dbus-test-service.py  libtest.sh  run_test.sh.in  test_finish.sh.in  test_init.sh.in  test_setup.sh
